--- a/doc/notes.texi
+++ b/doc/notes.texi
@@ -9,6 +9,19 @@ are bound at link-time and one in which symbols are bound at runtime only,
 similar to ELF@.  In case of doubt use @code{LDFLAGS=-Wl,-brtl} for the latter style.
 
 @item
+On AIX, native tools are to be preferred over binutils; especially for C++ code,
+if using the AIX Toolbox GCC 4.0 and binutils, configure with
+@code{AR=/usr/bin/ar LD=/usr/bin/ld NM='/usr/bin/nm -B'}.
+
+@item
+On AIX, the @command{/bin/sh} is very slow due to its inefficient handling
+of here-documents.  A modern shell is preferable:
+@example
+CONFIG_SHELL=/bin/bash; export $CONFIG_SHELL
+$CONFIG_SHELL ./configure [...]
+@end example
+
+@item
 For C++ code with templates, it may be necessary to specify the way the compiler
 will generate the instantiations.  For Portland pgCC version5, use
 @code{CXX='pgCC --one_instantiation_per_object'} and avoid parallel @command{make}.
