--- a/README
+++ b/README
@@ -128,3 +128,17 @@ not yet present in 2.59 but only in CVS Autoconf.
 setup to link properly against shared versions of the C++ standard libraries.
 See http://lists.gnu.org/archive/html/libtool/2005-08/msg00088.html for
 more information.
+
+11) On AIX there are two different styles of shared linking, one in
+which symbols are bound at link-time and one in which symbols are bound
+at runtime only, similar to ELF.  In case of doubt use `LDFLAGS=-Wl,-brtl'
+for the latter style.
+
+12) On AIX, native tools are to be preferred over binutils; especially
+for C++ code, if using the AIX Toolbox GCC 4.0 and binutils,
+configure with `AR=/usr/bin/ar LD=/usr/bin/ld NM="/usr/bin/nm -B"'.
+
+13) On AIX, the `/bin/sh' is very slow due to its inefficient handling
+of here-documents.  A modern shell is preferable:
+  CONFIG_SHELL=/bin/bash; export $CONFIG_SHELL
+  $CONFIG_SHELL ./configure [...]
