--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2008-01-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* doc/libtool.texi (Distributing libltdl): Clarify that
+	`${top_build_prefix}' may be used in place of `${top_builddir}/'.
+
+	* doc/libtool.texi (Distributing libltdl): Clarify that
 	LTDL_INIT goes after LT_INIT; also show the latter in the
 	respective examples.
 	* tests/subproject.at: Adjust order.
