--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2008-01-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	New variable LTDLDEPS for use in output_DEPENDENCIES.
+
+	* libltdl/m4/ltdl.m4 (_LTDL_CONVENIENCE, _LTDL_INSTALLABLE)
+	(LTDL_INIT): Set and substitute LTDLDEPS according to chosen
+	method.
+	* tests/configure-iface.at (installable libltdl)
+	(--with-ltdl-include/lib, --with-included-ltdl): Test it.
+	* doc/libtool.texi (Distributing libltdl): Document LTDLDEPS.
+	* NEWS: Updated.
+	Dependency bug exposed by Eric Blake in M4, found by Bob Proulx
+	build daemon.
+
+2008-01-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
 	* doc/libtool.texi (Distributing libltdl): Clarify that
 	`${top_build_prefix}' may be used in place of `${top_builddir}/'.
 
