--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-21  Bruno Haible  <bruno@clisp.org>
+
+	* ltmain.in (lt_env): New variable. Use it when running commands.
+
 2008-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Backport ISO C++ support from HEAD, 2006-03-17 and 2005-09-12 patches.
