--- a/doc/notes.texi
+++ b/doc/notes.texi
@@ -67,4 +67,14 @@ and an old version of @command{gcc} provided by Marco Walther.
 to use autoconf-mode, which is distributed with GNU Emacs 21, Autoconf itself,
 and all recent releases of XEmacs.
 
+@item
+When building on some linux systems for multilib targets
+@command{libtool} sometimes guesses the wrong paths that the linker
+and dynamic linker search by default. If this occurs, you may override
+libtool's guesses at @command{configure} time by setting the
+@command{autoconf} cache variables
+@code{lt_cv_sys_lib_search_path_spec} and
+@code{sys_lib_dlsearch_path_spec} respectively to the correct search
+paths.
+
 @end itemize
