--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-01-24  Peter O'Gorman  <peter@pogma.com>
 
+	* doc/libtool.texi: Fixup Notes.
+	* README: Delete notes.
+
+2008-01-24  Peter O'Gorman  <peter@pogma.com>
+
 	* doc/libtool/texi: Backport notes.texi from HEAD.
 
 	* libtool.m4 (sys_lib_search_path_spec, sys_lib_dlsearch_path_spec):
