--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-01-28  Gary V. Vaughan  <gary@gnu.org>
 
+	* libtoolize.m4sh: Set opt_ltdl whenever seen_ltdl is set
+	so that libtoolize behaves as though --ltdl was passed even
+	if it wasn't as long as LTDL_INIT (or equivalent) was seen
+	in configure.ac.  Adjust redundant '$opt_ltdl || $seen_ltdl'
+	to simply '$opt_ltdl'.
+	Reported by Eric Blake <ebb9@byu.net>
+
 	* libtoolize.m4sh (func_check_macros): Check opt_quiet
 	in the function itself to simplify calling it.  Also move
 	the definition of the function.
