--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-01-29  Peter O'Gorman  <peter@pogma.com>
+
+	Search the compiler path too.
+	* libtool.m4 (compiler_lib_search_dirs): New variable.
+	* ltmain.in: Use it.
+	Reported by Maynard Johnson
+
 2008-01-24  Peter O'Gorman  <peter@pogma.com>
 
 	* doc/libtool.texi: Fixup Notes.
